fix: remove horizontal scroll

--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -4,4 +4,10 @@
     -moz-font-smooth: grayscale;
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
+    max-width: 100%;
+}
+
+html {
+    overflow-x: hidden;
+    max-width: 100%;
 }
